# majestic-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PLAN.MD  README.md  bot.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  startup.sh
.github/workflows/: ci.yml
core/: agent.py  backup.py  ccw.py  config.py  error_logger.py  exporter.py  formatter.py  intel.py  market_pulse.py  rag_engine.py  reminders.py  rss.py  token_tracker.py  trends.py  web_search.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: index.css  main.tsx
docs/: banner.html  docs.html  index.html  style.css
majestic/: backup.py  config.py  constants.py  error_logger.py  rag.py  reminders.py  token_tracker.py
majestic/agent/: delegate.py  loop.py  prompt.py  runner.py  tools.py
majestic/api/: __init__.py  dashboard.py  email_api.py  llm_configs.py  mcp_api.py  scripts_api.py  server.py  workspace.py
majestic/cli/: commands.py  display.py  main.py  repl.py  repl_commands.py  repl_helpers.py  repl_stats.py  setup.py
majestic/cron/: __init__.py  jobs.py  scheduler.py
majestic/db/: embedder.py  migrations.py  parser.py  state.py
majestic/gateway/: __init__.py  (+8 more)
scripts/: install.sh
tests/: conftest.py  mock_mcp_server.py  test_agent.py  test_api.py  test_cron.py  test_dashboard_chat.py  test_dashboard_foundation.py  test_dashboard_monitoring.py  test_dashboard_settings.py  test_dashboard_tables.py  test_db.py  test_discord.py  test_history.py  test_llm.py  test_mcp.py  test_memory.py  test_tools.py
(+99 files in other folders)
