[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "majestic-agent"
version = "0.1.0"
description = "Universal agent executor"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
majestic = "majestic.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["majestic*"]
